Modificacion de estructura de user
